# hse-fcs-multimodal-course

./: .gitignore  README.md  pyproject.toml
homeworks/: .gitignore  HW1_clip_clap.ipynb  HW2_multimodal_adapter.ipynb  HW3_vqa_challenge.ipynb  README.md  homework-03-Konov.ipynb  hw3-pipline-test.ipynb  tensorboard-faq.md
w02_clip_clap/: README.md
w03_encoders/: encoders_spectrogram.ipynb
w04_fusion/: ClipCap.ipynb  sem04_blip.ipynb
w06_mllm/: MLLM.ipynb
